--- a/_includes/default/scripts-include.html
+++ b/_includes/default/scripts-include.html
@@ -4,6 +4,9 @@
   Licensed under MIT
 {%-endcomment-%}
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6282189816748859"
+     crossorigin="anonymous"></script>
+
 {% if site.data.conf.main.use_cdn_resources_if_available -%}
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
